src/test/ui/suggestions/type-ascription-instead-of-method.stderr
error: expected type, found `"foo"`
  --> $DIR/type-ascription-instead-of-method.rs:2:13
   |
LL |     Box:new("foo".to_string())
   |        -    ^^^^^ expected type
   |        |
   |        help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`

error: aborting due to previous error

